// Vitest Snapshot v1

exports[`User Menu component > Mount UserMenu component 1`] = `
<div
  class="ml-3 relative hover:bg-app-hover justify-end flex items-center rounded h-10"
  width="1300"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    id="headlessui-menu-button-1"
    type="button"
  >
    <div
      class="flex items-center gap-2 cursor-pointer"
    >
      <div
        class="flex items-center justify-center h-8 w-8 rounded-full bg-white flex-shrink-0 overflow-hidden"
      >
        <svg
          aria-hidden="true"
          class="text-gray-300"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1523 1339q-22-155-87.5-257.5T1251 963q-67 74-159.5 115.5T896 1120t-195.5-41.5T541 963q-119 16-184.5 118.5T269 1339q106 150 271 237.5t356 87.5t356-87.5t271-237.5zm-243-699q0-159-112.5-271.5T896 256T624.5 368.5T512 640t112.5 271.5T896 1024t271.5-112.5T1280 640zm512 256q0 182-71 347.5t-190.5 286T1245 1721t-349 71q-182 0-348-71t-286-191t-191-286T0 896t71-348t191-286T548 71T896 0t348 71t286 191t191 286t71 348z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!--v-if-->
      <svg
        class="w-3 text-app-chevron"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6l1.41-1.42Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <transition-stub>
    <!---->
  </transition-stub>
</div>
`;

exports[`User Menu component > Mount UserMenu component with smaller width 1`] = `
<div
  class="ml-3 relative hover:bg-app-hover justify-end flex items-center rounded h-10"
  width="700"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    id="headlessui-menu-button-3"
    type="button"
  >
    <div
      class="flex items-center gap-2 cursor-pointer"
    >
      <div
        class="flex items-center justify-center h-8 w-8 rounded-full bg-white flex-shrink-0 overflow-hidden"
      >
        <svg
          aria-hidden="true"
          class="text-gray-300"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1523 1339q-22-155-87.5-257.5T1251 963q-67 74-159.5 115.5T896 1120t-195.5-41.5T541 963q-119 16-184.5 118.5T269 1339q106 150 271 237.5t356 87.5t356-87.5t271-237.5zm-243-699q0-159-112.5-271.5T896 256T624.5 368.5T512 640t112.5 271.5T896 1024t271.5-112.5T1280 640zm512 256q0 182-71 347.5t-190.5 286T1245 1721t-349 71q-182 0-348-71t-286-191t-191-286T0 896t71-348t191-286T548 71T896 0t348 71t286 191t191 286t71 348z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!--v-if-->
      <svg
        class="w-3 text-app-chevron"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6l1.41-1.42Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
  <transition-stub>
    <!---->
  </transition-stub>
</div>
`;
